reverted font spacing fix. needs more information.

--- a/omarchy-discord.theme.css
+++ b/omarchy-discord.theme.css
@@ -525,11 +525,3 @@ div.folderIconWrapper__48112 {
     --base06: color-mix(in srgb, var(--color05) 95%, white) !important;
     --base07: color-mix(in srgb, var(--color05) 90%, white) !important;
 }
-
-/* --- Fix Discord's Text Spacing --- */
-.fieldTitle__1fed1,
-.item_aa8da2,
-.name__2ea32,
-.label_c1e9c4 {
-    letter-spacing: -1px;
-}
